--- a/_code/index.html
+++ b/_code/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- DataTables CSS -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
-</head>
-<body>
-    <div class="container mt-5">
-        <h2 class="mb-4">Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</h2>
-        <table id="example" class="table table-striped table-bordered" style="width:100%">
-            <thead>
-                <tr>
-                    <th>Tỉnh</th>
-                    <th>Lớp</th>
-                    <th>Năm học</th>
-                    <th>Link</th>
-                    <th>Đóng góp</th>
-                    <th></th>
-                </tr>
-            </thead>
-        </table>
-    </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</title>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <!-- DataTables CSS -->
+        <link rel="stylesheet"
+            href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+    </head>
+    <body>
+        <div class="container mt-5">
+            <h2 class="mb-4">Tổng hợp đề thi học sinh giỏi tin học của các
+                tỉnh</h2>
+            <table id="example" class="table table-striped table-bordered"
+                style="width:100%">
+                <thead>
+                    <tr>
+                        <th>Tỉnh</th>
+                        <th>Lớp</th>
+                        <th>Năm học</th>
+                        <th>Link</th>
+                        <th>Đóng góp</th>
+                        <th></th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- DataTables JS -->
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-    <script>
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <!-- Bootstrap JS -->
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <!-- DataTables JS -->
+        <script
+            src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+        <script>
         $(document).ready(function() {
             $('#example').DataTable({
                 "ajax": {
@@ -62,7 +68,7 @@
                     {
                         "targets": 5,
                         "render": function(data, type, row, meta) {
-                            return '<input type="checkbox" name="tinh" value="' + row['tinh'] + '" onclick="abc(\''+row['tinh']+row['lop']+row['nam']+row['file']+'\')">';
+                            return '<input type="checkbox" name="tinh" value="' + getLocalStorage(row['tinh']) + '" onclick="abc(\''+row['file']+'\')" '+(getLocalStorage(row['file']) == 1 ? 'checked' : '')+'>';
                         }
                     }
                 ]
@@ -70,8 +76,17 @@
         });
 
     function abc(id) {
-        console.log(id);
+        let data = localStorage.getItem(id);
+        localStorage.setItem(id, 1 - data);
+    }
+
+    function getLocalStorage(id) {
+        var data = localStorage.getItem(id);
+        if (data)
+            return data;
+        localStorage.setItem(id, 0);
+        return 0;
     }
     </script>
-</body>
+    </body>
 </html>
