--- a/_code/index.html
+++ b/_code/index.html
@@ -10,13 +10,68 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- DataTables CSS -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+    <style>
+        body {
+            background-color: #121212;
+            color: #ffffff;
+        }
+        .container {
+            background-color: #1e1e1e;
+            border-radius: 8px;
+            padding: 20px;
+        }
+        .table {
+            background-color: #1e1e1e;
+            color: #ffffff;
+        }
+        .table th {
+            background-color: #2c2c2c;
+        }
+        .table td {
+            background-color: #2c2c2c;
+        }
+        h2, h3 {
+            color: #ffffff;
+        }
+        a {
+            color: #1e90ff;
+        }
+        a:hover {
+            color: #63a4ff;
+        }
+        .dataTables_wrapper .dataTables_filter label,
+        .dataTables_wrapper .dataTables_length label,
+        .dataTables_wrapper .dataTables_info,
+        .dataTables_wrapper .dataTables_paginate {
+            color: #ffffff;
+        }
+        .dataTables_wrapper .dataTables_filter input,
+        .dataTables_wrapper .dataTables_length select {
+            background-color: #2c2c2c;
+            color: #ffffff;
+            border: 1px solid #555555;
+        }
+        .dataTables_wrapper .dataTables_paginate .paginate_button {
+            background-color: #2c2c2c;
+            color: #ffffff !important;
+            border: 1px solid #555555;
+            border-radius: 4px;
+            margin: 2px;
+        }
+        .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
+            background-color: #3e3e3e;
+        }
+        .dataTables_wrapper .dataTables_paginate .paginate_button.current {
+            background-color: #4a4a4a;
+        }
+    </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-4">Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</h2>
+        <h2 class="mb-4 text-center">Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</h2>
         
         <!-- Bộ lọc -->
-        <div class="mb-4">
+        <div class="mb-4 d-flex justify-content-center">
             <label>
                 <input type="checkbox" id="filterChecked" /> Đề đã hoàn thành &nbsp;&nbsp;
             </label>
@@ -25,7 +80,7 @@
             </label>
         </div>
 
-        <table id="example" class="table table-striped table-bordered" style="width:100%">
+        <table id="example" class="table table-bordered" style="width:100%">
             <thead>
                 <tr>
                     <th>Tỉnh</th>
@@ -68,7 +123,17 @@
             // Định dạng cột link và checkbox
             "columnDefs": [
                 {
+                    "targets": 1,
+                    "className": "text-center"
+
+                },
+                {
+                    "targets": 2,
+                    "className": "text-center"
+                },
+                {
                     "targets": 3,
+                    "className": "text-center", 
                     "render": function(data, type, row, meta) {
                         return '<a href="https://github.com/zukahai/provincial-informatics-exam-questions/blob/main/' + row['file'] + '" target="_blank">Xem</a>';
                     }
