--- a/_code/index.html
+++ b/_code/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-4 text-center">Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</h2>
+        <h1 class="mb-4 text-center">Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</h1>
         
         <!-- Bộ lọc -->
         <div class="mb-4 d-flex justify-content-center">
@@ -93,7 +93,7 @@
             </thead>
         </table>
         
-        <h3><a href="https://github.com/zukahai/provincial-informatics-exam-questions" target="_blank">Đóng góp thêm đề thi của bạn, mọi người sẽ biết được đề đó là do bạn đóng góp</a></h3>
+        <h3 class="text-center"><a href="https://github.com/zukahai/provincial-informatics-exam-questions" target="_blank">Đóng góp thêm đề thi của bạn, mọi người sẽ biết được đề đó là do bạn đóng góp</a></h3>
     </div>
 
     <!-- jQuery -->
