feat: add Vietnamese language support to DataTables

--- a/_code/index.html
+++ b/_code/index.html
@@ -105,6 +105,9 @@
     <script>
     $(document).ready(function() {
         var table = $('#example').DataTable({
+            "language": {
+                "url": "//cdn.datatables.net/plug-ins/1.10.21/i18n/Vietnamese.json"
+            },
             "ajax": {
                 "url": "data.json",
                 "dataSrc": function(json) {
