--- a/_code/index.html
+++ b/_code/index.html
@@ -69,6 +69,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4 text-center">Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</h1>
+
         
         <!-- Bộ lọc -->
         <div class="mb-4 d-flex justify-content-center">
@@ -87,12 +88,11 @@
                     <th>Lớp</th>
                     <th>Năm học</th>
                     <th>Link</th>
-                    <th>Đóng góp</th>
+                    <th>Đóng góp bởi email</th>
                     <th>Hoàn thành</th>
                 </tr>
             </thead>
         </table>
-        
         <h3 class="text-center"><a href="https://github.com/zukahai/provincial-informatics-exam-questions" target="_blank">Đóng góp thêm đề thi của bạn, mọi người sẽ biết được đề đó là do bạn đóng góp</a></h3>
     </div>
 
