--- a/_code/index.html
+++ b/_code/index.html
@@ -118,7 +118,7 @@
         var url = window.location.href;
         var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
             results = regex.exec(url);
-        if (!results) return null;
+        if (!results) return '';
         if (!results[2]) return '';
         return decodeURIComponent(results[2].replace(/\+/g, ' '));
     }
