chore: Update contributor email in table header of index.html

--- a/_code/index.html
+++ b/_code/index.html
@@ -97,10 +97,10 @@
                     </tr>
                 </thead>
             </table>
-            <h3 class="text-center"><a
+            <h4 class="text-center mt-4"><a
                     href="https://github.com/zukahai/provincial-informatics-exam-questions"
                     target="_blank">Đóng góp thêm đề thi của bạn, mọi người sẽ
-                    biết được đề đó là do bạn đóng góp</a></h3>
+                    biết được đề đó là do bạn đóng góp</a></h4>
         </div>
 
         <!-- jQuery -->
