--- a/_code/index.html
+++ b/_code/index.html
@@ -7,72 +7,14 @@
         <!-- icon -->
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <!-- DataTables CSS -->
-        <link rel="stylesheet"
-            href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
-        <style>
-        body {
-            background-color: #121212;
-            color: #ffffff;
-        }
-        .container {
-            background-color: #1e1e1e;
-            border-radius: 8px;
-            padding: 20px;
-        }
-        .table {
-            background-color: #1e1e1e;
-            color: #ffffff;
-        }
-        .table th {
-            background-color: #2c2c2c;
-        }
-        .table td {
-            background-color: #2c2c2c;
-        }
-        h2, h3 {
-            color: #ffffff;
-        }
-        a {
-            color: #1e90ff;
-        }
-        a:hover {
-            color: #63a4ff;
-        }
-        .dataTables_wrapper .dataTables_filter label,
-        .dataTables_wrapper .dataTables_length label,
-        .dataTables_wrapper .dataTables_info,
-        .dataTables_wrapper .dataTables_paginate {
-            color: #ffffff;
-        }
-        .dataTables_wrapper .dataTables_filter input,
-        .dataTables_wrapper .dataTables_length select {
-            background-color: #2c2c2c;
-            color: #ffffff;
-            border: 1px solid #555555;
-        }
-        .dataTables_wrapper .dataTables_paginate .paginate_button {
-            background-color: #2c2c2c;
-            color: #ffffff !important;
-            border: 1px solid #555555;
-            border-radius: 4px;
-            margin: 2px;
-        }
-        .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
-            background-color: #3e3e3e;
-        }
-        .dataTables_wrapper .dataTables_paginate .paginate_button.current {
-            background-color: #4a4a4a;
-        }
-    </style>
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
+        <link rel="stylesheet" href="./src/style.css">
     </head>
     <body>
         <div class="container mt-5">
-            <h1 class="mb-4 text-center">Tổng hợp đề thi học sinh giỏi tin học
-                của các tỉnh</h1>
-
+            <h1 class="mb-4 text-center">Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</h1>
             <!-- Bộ lọc -->
             <div class="mb-4 d-flex justify-content-center">
                 <label>
@@ -106,119 +48,8 @@
         <!-- jQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <!-- Bootstrap JS -->
-        <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <!-- DataTables JS -->
-        <script
-            src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-        <script>
-
-    function getParameterByName(name) {
-        name = name.replace(/[\[\]]/g, '\\$&');
-        var url = window.location.href;
-        var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-            results = regex.exec(url);
-        if (!results) return '';
-        if (!results[2]) return '';
-        return decodeURIComponent(results[2].replace(/\+/g, ' '));
-    }
-    $(document).ready(function() {
-        var table = $('#example').DataTable({
-            search: {
-                    search: getParameterByName('s')
-            },
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/1.10.21/i18n/Vietnamese.json"
-            },
-            "ajax": {
-                "url": "data.json",
-                "dataSrc": function(json) {
-                    // Giả định json là mảng chứa dữ liệu
-                    return json;
-                }
-            },
-            "columns": [
-                { "data": "tinh" },
-                { "data": "lop" },
-                { "data": "nam" },
-                { "data": "link" },
-                { "data": "email" },
-                { "data": null } // Cột này sẽ được custom
-            ],
-            // Định dạng cột link và checkbox
-            "columnDefs": [
-                {
-                    "targets": 1,
-                    "className": "text-center"
-
-                },
-                {
-                    "targets": 2,
-                    "className": "text-center"
-                },
-                {
-                    "targets": 3,
-                    "className": "text-center", 
-                    "render": function(data, type, row, meta) {
-                        return '<a href="https://github.com/zukahai/provincial-informatics-exam-questions/blob/main/' + row['file'] + '" target="_blank">Xem</a>';
-                    }
-                },
-                {
-                    "targets": 5,
-                    "orderable": false, // Không sắp xếp cột này
-                    "searchable": false, // Không tìm kiếm cột này
-                    "className": "text-center", // Căn giữa nội dung
-                    "render": function(data, type, row, meta) {
-                        var isChecked = getLocalStorage(row['file']) == 1 ? 'checked' : '';
-                        return '<input type="checkbox" name="tinh" value="' + getLocalStorage(row['tinh']) + '" onclick="abc(\'' + row['file'] + '\')" ' + isChecked + '>';
-                    }
-                }
-            ]
-        });
-
-        // Lọc dữ liệu dựa trên trạng thái checkbox
-        $('#filterChecked, #filterUnchecked').on('change', function() {
-            if (this.id === 'filterChecked') {
-                $('#filterUnchecked').prop('checked', false);
-            } else {
-                $('#filterChecked').prop('checked', false);
-            }
-            table.draw();
-        });
-
-        $.fn.dataTable.ext.search.push(
-            function(settings, data, dataIndex) {
-                var showChecked = $('#filterChecked').is(':checked');
-                var showUnchecked = $('#filterUnchecked').is(':checked');
-                var file = table.row(dataIndex).data()['file'];
-                var isChecked = getLocalStorage(file) == 1;
-
-                if (showChecked && isChecked) {
-                    return true;
-                }
-                if (showUnchecked && !isChecked) {
-                    return true;
-                }
-                if (!showChecked && !showUnchecked) {
-                    return true;
-                }
-                return false;
-            }
-        );
-    });
-
-    function abc(id) {
-        let data = localStorage.getItem(id);
-        localStorage.setItem(id, 1 - data);
-    }
-
-    function getLocalStorage(id) {
-        var data = localStorage.getItem(id);
-        if (data)
-            return data;
-        localStorage.setItem(id, 0);
-        return 0;
-    }
-    </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+        <script src="./src/main.js"></script>
     </body>
 </html>
