--- a/_code/index.html
+++ b/_code/index.html
@@ -43,10 +43,13 @@
                     href="https://github.com/zukahai/provincial-informatics-exam-questions"
                     target="_blank">Đóng góp thêm đề thi của bạn, mọi người sẽ
                     biết được đề đó là do bạn đóng góp</a></h4>
+
+            <div id="contributors" class="text-center "></div>
         </div>
 
         <!-- jQuery -->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <!-- Bootstrap JS -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
