--- a/_code/index.html
+++ b/_code/index.html
@@ -13,10 +13,9 @@
         <link rel="stylesheet" href="./src/style.css">
     </head>
     <body>
-        <div class="container mt-5">
+        <!-- <div class="container mt-5">
             <h1 class="mb-4 text-center">Tổng hợp đề thi học sinh giỏi tin học của các tỉnh</h1>
             <h5 id="count" class="text-center hidden"></h5>
-            <!-- Bộ lọc -->
             <div class="mb-4 d-flex justify-content-center">
                 <label>
                     <input type="checkbox" id="filterChecked" /> Đề đã hoàn
@@ -46,7 +45,9 @@
                     biết được đề đó là do bạn đóng góp</a></h4>
 
             <div id="contributors" class="text-center "></div>
-        </div>
+        </div> -->
+        <h1>Trang web đã chuyển qua:</h1>
+        <a href="https://haizuka.netlify.app/pied/">Bạn truy cập https://haizuka.netlify.app/pied/ để xem đề nhé</a>
 
         <!-- jQuery -->
         <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
