Update index.html to change redirect link to new exam resource page

--- a/_code/index.html
+++ b/_code/index.html
@@ -47,7 +47,7 @@
             <div id="contributors" class="text-center "></div>
         </div> -->
         <h1>Trang web đã chuyển qua:</h1>
-        <a href="https://haizuka.netlify.app/pied/">Bạn truy cập https://haizuka.netlify.app/pied/ để xem đề nhé</a>
+        <a href="https://haizuka.online/pied/">Bạn truy cập haizuka.online/pied/ để xem đề nhé</a>
 
         <!-- jQuery -->
         <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
