Update redirect links to new website address

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Thông báo</title>
 </head>
 <body>
-    Trang web đã chuyển qua địa chỉ: <a href="https://haizuka.online/">haizuka.online</a>
+    Trang web đã chuyển qua địa chỉ: <a href="https://haizuka.vn/">haizuka.vn</a>
 </body>
 </html>
